# ClipScribe

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  config.yaml  docker-compose.gcs.yml  docker-compose.yml  main.py  pyproject.toml  webcam_test.py
.claude/agents/: db-specialist.md  docs-maintainer.md  extractor-specialist.md  parser-specialist.md
.claude/commands/: inspect-db-run.md  quality.md  review-extractor-change.md  run-parser.md  setup-dev.md  typecheck.md
backend/: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 5b7769f8e6fd_add_jobs_frame_detections_parser_.py  848b1a5f7886_baseline_existing_schema.py  c1a2d3e4f5a6_add_chat_messages.py  d5e8b2c4a9f1_add_parent_job_id.py  e2f9c7a1b3d4_add_job_id_to_chat_messages.py  f3a1c9d2b7e5_add_videos_registry.py
backend/app/: celery_app.py  chat.py  deps.py  errors.py  events.py  exports.py  job_execution.py  job_runner.py  main.py  models.py  settings.py  tasks.py
backend/app/routes/: artifacts.py  chat.py  health.py  jobs.py  meta.py  runs.py  uploads.py
backend/checkpoints/: download_dino.py
backend/docker/api/: Dockerfile  entrypoint.sh
backend/docker/core/cpu/: Dockerfile  entrypoint.sh
backend/docker/core/gpu/: Dockerfile
backend/scripts/: download_dino.py  download_sam_ckpts.sh  prewarm.py
backend/src/clip_scribe/: CLAUDE.md  build_clip_scribe.py  build_clip_scribe_plalform.py  engine.py
backend/src/clip_scribe/configs/: clip_scribe.yaml
backend/src/clip_scribe/platform_configs/: youtube.py
backend/src/db/: __init__.py  engine.py  reader.py  schema.py  writer.py
backend/src/dino/: CLAUDE.md  dino_wrapper.py
backend/src/dino/groundingdino/datasets/: cocogrounding_eval.py
backend/src/dino/groundingdino/models/: __init__.py
backend/src/dino/groundingdino/models/GroundingDINO/: ms_deform_attn.py
backend/src/dino/groundingdino/models/GroundingDINO/backbone/: backbone.py  swin_transformer.py
backend/src/dino/groundingdino/util/: inference.py
backend/src/extractor/: CLAUDE.md  extractor_core.py  scene_describer.py  taxonomy_config.py  taxonomy_core.py
backend/src/ocr/: paddle_wrapper.py
backend/src/parser/: CLAUDE.md  advisory.py  agent.py  evaluator_base.py  parser_core.py  tools.py
backend/src/parser/youtube/: baseline.py  evaluator.py
backend/src/sam2/: CLAUDE.md
backend/src/sam2/configs/: sam2_hiera_s.yaml  sam2_hiera_t.yaml
backend/src/sam2/image/: hiera.py
backend/src/sam2/mask/: mask_decoder.py  transformer.py
backend/src/sam2/memory/: memory_attention.py  memory_encoder.py
backend/src/sam2/prompt/: prompt_encoder.py
backend/src/sam2/sam/: build_sam.py  sam2_base.py  sam2_video_processor.py
backend/src/utils/: CLAUDE.md  clip_scribe_artifacts.py  clip_scribe_cancel.py  clip_scribe_logging.py  clip_scribe_video_storage.py  ids.py  progress.py  sam2_misc.py
backend/test/: conftest.py  test_api_artifacts.py  test_api_chat.py  test_api_events.py  test_api_job_chat.py  test_api_jobs.py  test_api_runs.py  test_exports.py  test_jobs_db.py  test_persistence.py  test_progress.py  test_review_fixes.py  test_video_storage.py
checkpoints/: download_dingo_ckpts.sh  download_dino.py  download_sam_ckpts.sh
docs/: deployment.md  extractor-core-algorithm.md  sam2-tracking-and-identity.md  sse-progress-flow.md  web-app-plan.md
frontend/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: ChatPanel.tsx  JobSidebar.tsx  Markdown.tsx  PipelineAnimation.tsx  ui.tsx
frontend/src/lib/: format.ts  run-types.ts
frontend/src/routes/: __root.tsx  index.tsx  jobs.$jobId.tsx  jobs.new.tsx  runs.$runId.tsx
src/clip_scribe/: CLAUDE.md  build_clip_scribe.py  build_clip_scribe_plalform.py  engine.py
src/clip_scribe/configs/: clip_scribe.yaml
src/clip_scribe/platform_configs/: __init__.py  base.py
src/config/: config.py
src/db/: __init__.py  schema.py  writer.py
src/dingo/: dingo_wrapper.py
src/dingo/groundingdino/datasets/: cocogrounding_eval.py  transforms.py
src/dingo/groundingdino/models/GroundingDINO/: groundingdino.py  transformer.py
src/dingo/groundingdino/models/GroundingDINO/backbone/: backbone.py  position_encoding.py  swin_transformer.py
src/dingo/groundingdino/util/: inference.py  utils.py
src/dino/: CLAUDE.md  README.md  dino_prompt.py  dino_wrapper.py
src/dino/groundingdino/datasets/: cocogrounding_eval.py  transforms.py
src/dino/groundingdino/models/GroundingDINO/: __init__.py  groundingdino.py  transformer.py
src/dino/groundingdino/models/GroundingDINO/backbone/: backbone.py  position_encoding.py  swin_transformer.py
src/dino/groundingdino/util/: inference.py  utils.py  visualizer.py
src/extractor/: CLAUDE.md  extractor.py  extractor_core.py  main.py  scene_describer.py  taxonomy_config.py  taxonomy_core.py  taxonomy_runtime.py
src/ocr/: CLAUDE.md  paddle_wrapper.py
src/parser/: CLAUDE.md  agent.py  evaluator_base.py  models.py  parser_core.py  report_writer.py  tools.py
src/parser/youtube/: __init__.py  agent.py  baseline.py  criteria.py  evaluator.py  models.py  report.py  tools.py
src/sam2/: CLAUDE.md
src/sam2/configs/: sam2_hiera_t.yaml
src/sam2/image/: hiera.py  utils.py
src/sam2/mask/: mask_decoder.py  transformer.py
src/sam2/memory/: memory_attention.py  memory_encoder.py
src/sam2/prompt/: prompt_encoder.py
src/sam2/sam/: build_sam.py  sam2_base.py  sam2_video_processor.py
src/utils/: CLAUDE.md  clib_scribe_db.py  clip_scribe_logging.py  sam2_utils.py
