[project]
name = "clip_scribe"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "colorlog>=6.10.1",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "opencv-python>=4.13.0.90",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers",
    "supervision>=0.22.0",
    "paddleocr>=2.0.1",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.11",
    "scenedetect>=0.6.7.1",
    "python-dotenv>=1.2.1",
    "openai-agents>=0.7.0",
    "pydantic>=2.12.5",
    "nltk>=3.9.2",
    "sentence-transformers>=5.2.2",
    "facenet-pytorch>=2.5.3",
    "openai-whisper>=20250625",
    "paddlepaddle",
    "addict",
    "yapf",
    "pycocotools",
    "timm",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.0",
    "pandas-stubs>=2.2.0",
    "pre-commit==4.2.0",
    "pytest==9.0.2",
    "pytest-cov==7.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
ignore_missing_imports = true
